--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+body{
+    max-width: 1200px;
+    margin: 0 auto;
+}
+.block{
+    -webkit-box-shadow: 0px 5px 10px 12px rgba(34, 60, 80, 0.11);
+    -moz-box-shadow: 0px 5px 10px 12px rgba(34, 60, 80, 0.11);
+    box-shadow: 0px 5px 10px 12px rgba(34, 60, 80, 0.11);
+    border-radius: 20px;
+}
